build_tests/04-builder-struct-partial.rs
use buco::Builder;

#[derive(Builder)]
struct Elements {
    fire: u8,
}

fn main() {
    let _ = Elements::builder().build();
}
